--- a/spring-boot/src/main/resources/templates/part1_1_non_vulnerable.html
+++ b/spring-boot/src/main/resources/templates/part1_1_non_vulnerable.html
@@ -45,7 +45,7 @@
             <br>
 
 
-            <form id="form" th:action="@{/part1_1_non_vulnerable_post}" th:object="${formlogin}" method = "post" onsubmit="input(event)">
+            <form id="form" autocomplete="off" th:action="@{/part1_1_non_vulnerable_post}" th:object="${formlogin}" method = "post" onsubmit="input(event)">
                 <table  style="width: 300px ; background-color:#f19191" border="1" cellpadding="1">
                     <thead>
                         <tr>
